--- a/css/index.css
+++ b/css/index.css
@@ -273,3 +273,160 @@ $toolbar-size: 52px;
   height: 190px;
   background-position: 0 -220px;
 }
+
+/*
+$toolbar-size: 52px;
+.toolbar {
+  position: fixed;
+  left: 50%;
+  bottom: 5px;
+  margin-left: -$toolbar-size / 2;
+}
+
+.toolbar-item {
+  position: relative;
+  display: block;
+  width: $toolbar-size;
+  height: $toolbar-size;
+  margin-top: 1px;
+  &:hover {
+    .toolbar-btn {
+      &:before {
+        top: -$toolbar-size;
+      }
+      &:after {
+        top: 0;
+      }
+    }
+    &:after{
+      @include opacity(1);
+      @include scale(1);
+
+    }
+  }
+  //二维码
+  &:after {
+    content: "";
+    position: absolute;
+    right: $toolbar-size - 6;
+    bottom: -10px;
+    width: 172px;
+    background-image: url("../img/toolbar_img.png");
+    background-repeat: no-repeat;
+    @include opacity(0);
+    @include transform-origin(95% 95%);
+    @include scale(0.01);
+    @include transition(all 1s);
+  }
+
+}
+
+.toolbar-layer-weixin {
+  .toolbar-btn {
+    &:before {
+      content: "\e902";
+    }
+    &:after {
+      content: "公共\A账号";
+    }
+  }
+  &:after {
+    content: "";
+    height: 210px;
+    background-position: 0 0;
+  }
+}
+
+.toolbar-item-feedback {
+  .toolbar-btn {
+    &:before {
+      content: "\e900";
+    }
+    &:after {
+      content: "用户\A反馈";
+    }
+  }
+}
+
+.toolbar-layer-app {
+  .toolbar-btn {
+    &:before {
+      content: "\e901";
+    }
+    &:after {
+      content: "app \A下载";
+    }
+  }
+  &:after {
+    content: "";
+    height: 190px;
+    background-position: 0 -220px;
+  }
+
+}
+
+.toolbar-item-top {
+  .toolbar-btn {
+    &:before {
+      content: "\e903";
+    }
+    &:after {
+      content: "返回\A顶部";
+    }
+  }
+}
+
+.toolbar-btn {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: $toolbar-size;
+  height: $toolbar-size;
+  overflow: hidden;
+
+  //font字体图标里面的公共样式
+  font-family: 'icomoon';
+  speak: none;
+  font-style: normal;
+  font-weight: normal;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  !* Better Font Rendering =========== *!
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+
+  //icon
+  &:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: $toolbar-size;
+    height: $toolbar-size;
+    background-color: #d0d6d9;
+    font-size: 30px;
+    color: #ffffff;
+    text-align: center;
+    line-height: $toolbar-size;
+    @include transition(top 1s)
+  }
+  //text
+  &:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: $toolbar-size;
+    width: $toolbar-size;
+    height: $toolbar-size;
+    background-color: #98a1a6;
+    font-size: 12px;
+    color: #ffffff;
+    text-align: center;
+    line-height: 1.2;
+    padding-top: 12px;
+    @include transition(top 1s)
+  }
+  white-space: pre;
+}
+*/
